force-app/main/default/objects/zkmulti__MCCustoms_Item__c/zkmulti__MCCustoms_Item__c.object-meta.xml
<CustomObject>
    <label>Product</label>
    <nameField>
        <displayFormat>Product-{0000000}</displayFormat>
        <label>Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>