force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__CIMarksAndNumbers__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CIMarksAndNumbers__c</fullName>
    <label>CI Marks and Numbers</label>
    <length>15</length>
    <type>Text</type>
</CustomField>