force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Country_of_Manufacture__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Country_of_Manufacture__c</fullName>
    <label>Country of Manufacture</label>
    <length>2</length>
    <type>Text</type>
</CustomField>