force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__ECCN_Number__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ECCN_Number__c</fullName>
    <label>ECCN Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>