force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Grouped_Package_Ids__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Grouped_Package_Ids__c</fullName>
    <label>Grouped Package Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>