force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Harmonized_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Harmonized_Code__c</fullName>
    <label>Harmonized Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>