force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__License_Code__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__License_Code__c</fullName>
    <label>Export License Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>