force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__License_Line_Value__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__License_Line_Value__c</fullName>
    <label>Export License Line Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>