force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__NetCostMethod__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NetCostMethod__c</fullName>
    <label>Net Cost Method</label>
    <length>100</length>
    <type>Text</type>
</CustomField>