force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__NMFC_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__NMFC_Sub_Category__c</fullName>
    <label>NMFC Sub Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>