force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Order_Item_Id__c</fullName>
    <label>Order Item Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>