force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__Package_Index__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Package_Index__c</fullName>
    <label>Package Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>