force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__QuantityUnits__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__QuantityUnits__c</fullName>
    <label>Quantity Units</label>
    <length>3</length>
    <type>Text</type>
</CustomField>