force-app/main/default/objects/zkmulti__MCCustoms_Item__c/fields/zkmulti__ScheduleBNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ScheduleBNumber__c</fullName>
    <label>Schedule B Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>