force-app/main/default/objects/zkmulti__MCCustoms_Item__c/listViews/zkmulti__Customs_Items_Data.listView-meta.xml
<ListView>
    <fullName>zkmulti__Customs_Items_Data</fullName>
    <columns>NAME</columns>
    <columns>zkmulti__Carrier__c</columns>
    <columns>zkmulti__Name__c</columns>
    <columns>zkmulti__Contents_Type__c</columns>
    <columns>zkmulti__Weight__c</columns>
    <columns>zkmulti__UnitPrice__c</columns>
    <columns>zkmulti__Value__c</columns>
    <columns>zkmulti__Harmonized_Code__c</columns>
    <columns>zkmulti__Country_of_Manufacture__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>zkmulti__Is_Profile__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Products Data</label>
</ListView>